[package]
name = "alt_bitflags"
version = "0.1.0"
authors = ["Max Naumchyk <max.naumch@gmail.com>"]

description = "Macros to implement a struct which behave similar to bitflags"

repository = "https://github.com/max-ym/alt-bitflags"
keywords = ["bitfields", "bitflags", "flags", "bitmap"]
license = "Unlicense"
